--- a/app/views/pages/edit-manpower.ejs
+++ b/app/views/pages/edit-manpower.ejs
@@ -94,15 +94,15 @@
 
                 })
             })
+            .then(response => console.log(response.JSON()))
+                .catch(err => console.log(err))
 
             Swal.fire({
                 icon: 'success',
                 title: 'Good job!',
                 text: 'Edit Data Complete',
-                // footer: '<a href="/manpower">Back to ManPower</a>'
+                
             })
-                .then(response => console.log(response))
-                .catch(err => console.log(err));
 
         }
         async function getData(id) {
@@ -120,12 +120,9 @@
     <h1>Edit Data</h1>
     <form>
         <label id="company" for="company"><b> Company :</b></label><br>
-        <input type="radio" name="company" value="companyA" <% if (data.company === "companyA"){%> checked <% } %>>
-        Company A<br>
-        <input type="radio" name="company" value="companyB" <% if (data.company === "companyB"){%> checked <% } %>>
-        Company B<br>
-        <input type="radio" name="company" value="companyC" <% if (data.company === "companyC"){%> checked <% } %>>
-        Company C<br>
+        <input type="radio" name="company" value="companyA" <% if (data.company === "companyA"){%> checked <% } %>> Company A<br>
+        <input type="radio" name="company" value="companyB" <% if (data.company === "companyB"){%> checked <% } %>> Company B<br>
+        <input type="radio" name="company" value="companyC" <% if (data.company === "companyC"){%> checked <% } %>> Company C<br>
 
         <label id="department" for="department"><b> Department : </b></label><br>
         <input type="radio" name="department" value="departmentA" <% if (data.department === "departmentA"){%> checked
