--- a/app/views/pages/page-control.ejs
+++ b/app/views/pages/page-control.ejs
@@ -527,7 +527,7 @@
                 <input type="text" id="lastNameEN" name="lastNameEN" value=""><br>
             </div>
             <div class="field">
-                <label for="birthDate"><b>อายุ:</b></label><br>
+                <label for="birthDate"><b>วัน-เดือน-ปีเกิด:</b></label><br>
                 <input type="date" id="birthDate" name="birthDate" value=""><br>
             </div>
             <div class="field">
