--- a/app/views/pages/edit-pagecontrol.ejs
+++ b/app/views/pages/edit-pagecontrol.ejs
@@ -168,7 +168,7 @@
     }
 
     async function Updatedata2(id) {
-        let generalID = document.getElementById("generalID").innerHTML
+  
     
         const position1val = document.querySelector('input[name="position1"]:checked').value;
         console.log(position1val)
@@ -186,13 +186,12 @@
         console.log(statusval)
 
 
-        let response2 = await fetch(`http://localhost:8080/api/application/${id}`, {
+        let response2 = await fetch(`http://localhost:8080/api/application/:id/${id}`, {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                "generalID": generalID ,
                 "position1": position1val,
                 "position2": position2val,
                 "expectedSalary": expectedSalaryval,
@@ -200,13 +199,8 @@
                 "status": statusval,
             })
         })
-        .then(async response2 =>  {
-           let data1 =  await response2.json()
-           test.innerHTML = data1.result.generalID
-        })
+        .then(response2 => console.log(response2.json()))
             .catch(err => console.log(err))
-
-
 
         Swal.fire({
             icon: 'success',
@@ -214,8 +208,8 @@
             text: 'Add Data Complete'
         })
     }
-    async function createData3(id) {
-        let generalID = document.getElementById("generalID").innerHTML
+    async function Updatedata3(id) {
+
 
         const detailTHval = document.getElementById("detailTH").value;
         console.log(detailTHval)
@@ -260,7 +254,7 @@
         console.log(presentAddressProvinceval)
 
         const presentAddressPostalCodeval = document.getElementById("presentAddressPostalCode").value;
-        console.log(presentAddressPostalCode)
+        console.log(presentAddressPostalCodeval)
         
         const contactEmailval = document.getElementById("contactEmail").value;
         console.log(contactEmailval)
@@ -268,13 +262,13 @@
         const contactPhoneval = document.getElementById("contactPhone").value;
         console.log(contactPhoneval)
 
-        let response3 = await fetch(`http://localhost:8080/api/contractaddress/${id}`, {
+        let response3 = await fetch(`http://localhost:8080/api/contractaddress/:id/${id}`, {
             method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                "generalID": generalID ,
+             
                 "detailTH": detailTHval,
                 "subAreaTH": subAreaTHval,
                 "areaTH": areaTHval,
@@ -292,16 +286,20 @@
                 "presentAddressPostalCode" :presentAddressPostalCodeval,
                 "contactEmail": contactEmailval,
                 "contactPhone": contactPhoneval,
-                
 
             })
         })
         .then(response3 => console.log(response3.json()))
             .catch(err => console.log(err))
+            Swal.fire({
+            icon: 'success',
+            title: 'Good job!',
+            text: 'Add Data Complete'
+        })
 
     }
 
-    async function createData4() {
+    async function Updatedata4(id) {
         const drivingLicenseTypeval = document.querySelector('input[name="drivingLicenseType"]:checked').value;
         console.log(drivingLicenseTypeval)
       
@@ -312,25 +310,25 @@
         console.log(drivingLicenseNoval)
 
        
-        let response3 = await fetch('http://localhost:8080/api/driving/', {
-            method: 'POST',
+        let response4 = await fetch(`http://localhost:8080/api/driving/:id/${id}`, {
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
+                
             },
             body: JSON.stringify({
-                "generalID": "55ac7ad0-5eab-4e70-af50-aecc1fd04c88" ,
                 "drivingLicenseType": drivingLicenseTypeval,
                 "drivingType": drivingTypeval,
                 "drivingLicenseNo": drivingLicenseNoval,
 
             })
         })
-        .then(response3 => console.log(response3.json()))
+        .then(response4 => console.log(response4.json()))
             .catch(err => console.log(err))
 
     }
 
-    async function createData5() {
+    async function UpdateData5(id) {
         const companyNameHistoryList = []
         companyNameHistoryList.push(document.getElementById("companyNameHistory").value);
       
@@ -340,24 +338,22 @@
         const salaryHistoryList = []
         salaryHistoryList.push(document.getElementById("salaryHistory").value);
        
-        let response5 = await fetch('http://localhost:8080/api/history/', {
-            method: 'POST',
+        let response5 = await fetch(`http://localhost:8080/api/history/:id/${id}`, {
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                "generalID": "55ac7ad0-5eab-4e70-af50-aecc1fd04c88" ,
                 "companyNameHistory": companyNameHistoryList,
                 "positionHistory": positionHistoryList,
                 "salaryHistory": salaryHistoryList,
-
             })
         })
         .then(response5 => console.log(response5.json()))
             .catch(err => console.log(err))
 
     }
-    async function createData6() {
+    async function UpdateData6(id) {
 
         const educationLevelval = document.querySelector('input[name="educationLevel"]:checked').value;
         console.log(educationLevelval)
@@ -369,13 +365,12 @@
         console.log(majorval)
 
        
-        let response6 = await fetch('http://localhost:8080/api/education/', {
-            method: 'POST',
+        let response6 = await fetch(`http://localhost:8080/api/education/:id/${id}`, {
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                "generalID": "55ac7ad0-5eab-4e70-af50-aecc1fd04c88" ,
                 "educationLevel": educationLevelval,
                 "name": nameval,
                 "major": majorval,
@@ -386,7 +381,7 @@
             .catch(err => console.log(err))
 
     }
-    async function createData7() {
+    async function UpdateData7(id){
 
         const typeOfSkillval = document.querySelector('input[name="typeOfSkill"]:checked').value;
         console.log(typeOfSkillval)
@@ -397,18 +392,18 @@
 
 
 
-        let response6 = await fetch('http://localhost:8080/api/skill/', {
-            method: 'POST',
+        let response7 = await fetch(`http://localhost:8080/api/skill/:id/${id}`, {
+            method: 'PUT',
             headers: {
                 'Content-Type': 'application/json'
             },
             body: JSON.stringify({
-                "generalID": "55ac7ad0-5eab-4e70-af50-aecc1fd04c88" ,
+               
                 "typeOfSkill": typeOfSkillval,
                 "level": levelval,
             })
         })
-        .then(response6 => console.log(response6.json()))
+        .then(response7 => console.log(response7.json()))
             .catch(err => console.log(err))
 
         }
@@ -558,94 +553,89 @@
         <div class="step step-3">
             <h4>Contact-Address Data</h4>
             <label for="detailTH"><b>ที่อยู่ (ไทย):</b></label><br>
-            <input type="text" id="detailTH" name="detailTH" value=""><br>
+            <input type="text" id="detailTH" name="detailTH" value="<%= datacontractaddress.detailTH %>"><br>
 
             <label for="subAreaTH"><b>ตำบล (ไทย):</b></label><br>
-            <input type="text" id="subAreaTH" name="subAreaTH" value=""><br>
+            <input type="text" id="subAreaTH" name="subAreaTH" value="<%= datacontractaddress.subAreaTH %>"><br>
 
             <label for="areaTH"><b>อำเภอ (ไทย):</b></label><br>
-            <input type="text" id="areaTH" name="areaTH" value=""><br>
+            <input type="text" id="areaTH" name="areaTH" value="<%= datacontractaddress.areaTH %>"><br>
 
             <label for="provinceTH"><b>จังหวัด (ไทย):</b></label><br>
-            <input type="text" id="provinceTH" name="provinceTH" value=""><br>
+            <input type="text" id="provinceTH" name="provinceTH" value="<%= datacontractaddress.provinceTH %>"><br>
 
             <label for="postalCodeTH"><b>รหัสไปรษณีย์ (ไทย):</b></label><br>
-            <input type="text" id="postalCodeTH" name="postalCodeTH" value=""><br>
+            <input type="text" id="postalCodeTH" name="postalCodeTH" value="<%= datacontractaddress.postalCodeTH %>"><br>
 
             <label for="detailEN"><b>ที่อยู่ (อังกฤษ):</b></label><br>
-            <input type="text" id="detailEN" name="detailEN" value=""><br>
+            <input type="text" id="detailEN" name="detailEN" value="<%= datacontractaddress.detailEN %>"><br>
 
             <label for="subAreaEN"><b>ตำบล (อังกฤษ):</b></label><br>
-            <input type="text" id="subAreaEN" name="subAreaEN" value=""><br>
+            <input type="text" id="subAreaEN" name="subAreaEN" value="<%= datacontractaddress.subAreaEN %>"><br>
 
             <label for="areaEN"><b>อำเภอ (อังกฤษ):</b></label><br>
-            <input type="text" id="areaEN" name="areaEN" value=""><br>
+            <input type="text" id="areaEN" name="areaEN" value="<%= datacontractaddress.areaEN %>"><br>
 
             <label for="provinceEN"><b>จังหวัด (อังกฤษ):</b></label><br>
-            <input type="text" id="provinceEN" name="provinceEN" value=""><br>
+            <input type="text" id="provinceEN" name="provinceEN" value="<%= datacontractaddress.provinceEN %>"><br>
 
             <label for="postalCodeEN"><b>รหัสไปรษณีย์ (อังกฤษ):</b></label><br>
-            <input type="text" id="postalCodeEN" name="postalCodeEN" value=""><br>
+            <input type="text" id="postalCodeEN" name="postalCodeEN" value="<%= datacontractaddress.postalCodeEN %>"><br>
 
             <label for="presentAddress"><b>ที่อยู่ปัจจุบัน:</b></label><br>
-            <input type="text" id="presentAddress" name="presentAddress" value=""><br>
+            <input type="text" id="presentAddress" name="presentAddress" value="<%= datacontractaddress.presentAddress %>"><br>
 
             <label for="presentAddressSubArea"><b>ตำบลปัจจุบัน:</b></label><br>
-            <input type="text" id="presentAddressSubArea" name="presentAddressSubArea" value=""><br>
+            <input type="text" id="presentAddressSubArea" name="presentAddressSubArea" value="<%= datacontractaddress.presentAddressSubArea %>"><br>
 
             <label for="presentAddressArea"><b>อำเภอปัจจุบัน:</b></label><br>
-            <input type="text" id="presentAddressArea" name="presentAddressArea" value=""><br>
+            <input type="text" id="presentAddressArea" name="presentAddressArea" value="<%= datacontractaddress.presentAddressArea %>"><br>
 
             <label for="presentAddressProvince"><b>จังหวัดปัจจุบัน:</b></label><br>
-            <input type="text" id="presentAddressProvince" name="presentAddressProvince" value=""><br>
+            <input type="text" id="presentAddressProvince" name="presentAddressProvince" value="<%= datacontractaddress.presentAddressProvince %>"><br>
 
             <label for="presentAddressPostalCode"><b>รหัสไปรษณีย์ :</b></label><br>
-            <input type="text" id="presentAddressPostalCode" name="presentAddressPostalCode" value=""><br>
+            <input type="text" id="presentAddressPostalCode" name="presentAddressPostalCode" value="<%= datacontractaddress.presentAddressPostalCode %>"><br>
 
             <label for="contactPhone"><b>เบอร์โทรติดต่อ:</b></label><br>
-            <input type="text" id="contactPhone" name="contactPhone" value=""><br>
+            <input type="text" id="contactPhone" name="contactPhone" value="<%= datacontractaddress.contactPhone %>"><br>
 
             <label for="contactEmail"><b>E-mail:</b></label><br>
-            <input type="email" id="contactEmail" name="contactEmail" value=""><br>
+            <input type="email" id="contactEmail" name="contactEmail" value="<%= datacontractaddress.contactEmail %>"><br>
             <br>
-            <button type="button" class="next-btn" onclick="createData3(id)">Next</button>
+            <button type="button" class="next-btn" onclick="Updatedata3('<%= datacontractaddress.contractID %>')">Next</button>
             <button type="button" class="previous-btn">Prev</button>
 
         </div>
         <div class="step step-4 ">
             <h4>Driving Data</h4>
             <label id="drivingLicenseType" for="drivingLicenseType"><b> ใบขับขี่:</b></label><br>
-            <input type="radio" name="drivingLicenseType" value="drivingLicenseTypeA"> ใบขับขี่รถจักรยานยนต์ <br>
-            <input type="radio" name="drivingLicenseType" value="drivingLicenseTypeB"> ใบขับขี่รถยนต์<br>
-            <!-- 
-            <label for="drivingLicenseType"><b>ใบขับขี่:</b></label>
-            <select name="drivingLicenseType" id="drivingLicenseType" form="statusform">
-                <option value="drivingLicenseTypeA">ใบขับขี่รถจักรยานยนต์</option>
-                <option value="drivingLicenseTypB">ใบขับขี่รถยนต์</option>
-            </select>
-            <br> -->
+            <input type="radio" name="drivingLicenseType" value="drivingLicenseTypeA" <% if (datadriving.drivingLicenseType === "drivingLicenseTypeA"){%> checked <% } %>> ใบขับขี่รถจักรยานยนต์ <br>
+            <input type="radio" name="drivingLicenseType" value="drivingLicenseTypeB" <% if (datadriving.drivingLicenseType === "drivingLicenseTypeB"){%> checked <% } %>> ใบขับขี่รถยนต์<br>
+
             <label for="drivingType"><b>drivingType:</b></label><br>
-            <input type="text" id="drivingType" name="drivingType" value=""><br>
+            <input type="text" id="drivingType" name="drivingType" value="<%= datadriving.drivingType %>"><br>
 
             <label for="drivingLicenseNo"><b>เลขที่ใบขับขี่:</b></label><br>
-            <input type="text" id="drivingLicenseNo" name="drivingLicenseNo" value=""><br>
+            <input type="text" id="drivingLicenseNo" name="drivingLicenseNo" value="<%= datadriving.drivingLicenseNo %>"><br>
 
             <!-- <label for="drivingExpiryDate"><b>วันหมดอายุ:</b></label><br>
             <input type="date" id="drivingExpiryDate" name="drivingExpiryDate" value=""><br>
             <br> -->
-            <button type="button" class="next-btn" onclick="createData4()">Next</button>
+
+            <button type="button" class="next-btn" onclick="Updatedata4('<%= datadriving.drivingID %>')">Next</button>
             <button type="button" class="previous-btn">Prev</button>
         </div>
         <div class="step step-5 ">
             <h4>History Data</h4>
             <label for="companyNameHistory"><b>ชื่อบริษัท:</b></label><br>
-            <input type="text" id="companyNameHistory" name="companyNameHistory" value=""><br>
+            <input type="text" id="companyNameHistory" name="companyNameHistory" value="<%= datahistory.companyNameHistory %>"><br>
 
             <label for="positionHistory"><b>ตำแหน่ง:</b></label><br>
-            <input type="text" id="positionHistory" name="positionHistory" value=""><br>
+            <input type="text" id="positionHistory" name="positionHistory" value="<%= datahistory.positionHistory %>"><br>
 
             <label for="salaryHistory"><b>เงินเดือน:</b></label><br>
-            <input type="text" id="salaryHistory" name="salaryHistory" value=""><br>
+            <input type="text" id="salaryHistory" name="salaryHistory" value="<%= datahistory.salaryHistory %>"><br>
 
             <!-- <label for="startDate"><b>วันที่เริ่มงาน:</b></label><br>
             <input type="date" id="startDate" name="startDate" value=""><br> -->
@@ -654,21 +644,21 @@
             <input type="date" id="endDate" name="endDate" value=""><br>
             <br> -->
 
-            <button type="button" class="next-btn" onclick="createData5()">Next</button>
+            <button type="button" class="next-btn" onclick="UpdateData5('<%= datahistory.historyID %>')">Next</button>
             <button type="button" class="previous-btn">Prev</button>
         </div>
         <div class="step step-6 ">
             <h4>Education Data</h4>
             <label id="educationLevel" for="educationLevel"><b> ระดับการศึกษา :</b></label><br>
-                <input type="radio" name="educationLevel" value="ปริญญาตรี"> ปริญญาตรี<br>
-                <input type="radio" name="educationLevel" value="ปริญญาโท"> ปริญญาโท<br>
+                <input type="radio" name="educationLevel" value="ปริญญาตรี"<% if (dataeducation.educationLevel === "ปริญญาตรี"){%> checked <% } %>> ปริญญาตรี<br>
+                <input type="radio" name="educationLevel" value="ปริญญาโท"<% if (dataeducation.educationLevel === "ปริญญาโท"){%> checked <% } %>> ปริญญาโท<br>
 
             <br>
             <label for="name"><b>ชื่อสถาบัน:</b></label><br>
-            <input type="text" id="name" name="name" value=""><br>
+            <input type="text" id="name" name="name" value="<%= dataeducation.name %>"><br>
 
             <label for="major"><b>วิชาที่ศึกษา/วุฒติที่ได้รับ:</b></label><br>
-            <input type="text" id="major" name="major" value=""><br>
+            <input type="text" id="major" name="major" value="<%= dataeducation.major %>"><br>
 
             <!-- <label for="startDate"><b>ปีที่เริ่มศึษา:</b></label><br>
             <input type="date" id="startDate" name="startDate" value=""><br>
@@ -678,22 +668,22 @@
             <br> -->
 
 
-            <button type="button" class="next-btn" onclick="createData6()">Next</button>
+            <button type="button" class="next-btn" onclick="UpdateData6('<%= dataeducation.educationID %>')">Next</button>
             <button type="button" class="previous-btn">Prev</button>
         </div>
 
         <div class="step step-7 ">
             <h4>Skill Data</h4>
             <label id="typeOfSkill" for="typeOfSkill"><b> ความสามารถ :</b></label><br>
-            <input type="radio" name="typeOfSkill" value="computer"> computer <br>
-            <input type="radio" name="typeOfSkill" value="readingEnglish"> readingEnglish<br>
+            <input type="radio" name="typeOfSkill" value="computer"<% if (dataskill.typeOfSkill === "computer"){%> checked <% } %>> computer <br>
+            <input type="radio" name="typeOfSkill" value="readingEnglish"<% if (dataskill.typeOfSkill === "readingEnglish"){%> checked <% } %>> readingEnglish<br>
             <br>
             <label id="level" for="level"><b> ระดับ:</b></label><br>
-            <input type="radio" name="level" value="level1"> level1 <br>
-            <input type="radio" name="level" value="level2"> level2<br>
-            <input type="radio" name="level" value="level3"> level3<br>
+            <input type="radio" name="level" value="level1"<% if (dataskill.level === "level1"){%> checked <% } %>> level1 <br>
+            <input type="radio" name="level" value="level2"<% if (dataskill.level === "level2"){%> checked <% } %>> level2<br>
+            <input type="radio" name="level" value="level3"<% if (dataskill.level === "level3"){%> checked <% } %>> level3<br>
 
-            <button type="submit" class="submit-btn" onclick="createData7()">Submit</button>
+            <button type="submit" class="submit-btn" onclick="UpdateData7('<%= dataskill.skillID %>')">Submit</button>
             <button type="button" class="previous-btn">Prev</button>
 
         </div>
